--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Play Snake Game - A modern, dark-themed Snake game with progressive difficulty">
+    <title>Snake Game - Play Online</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
