Fix CSS loading issue on Vercel - add fallback styles and fix paths

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Play Snake Game - A modern, dark-themed Snake game with progressive difficulty">
     <title>Snake Game - Play Online</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
+    <style>
+        /* Fallback dark theme in case CSS doesn't load */
+        body {
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%) !important;
+            color: white;
+        }
+        .container {
+            background: #0f0c29 !important;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
